feat: add loan detail
