# docs/swagger.json
@@ -309,6 +309,73 @@
                 }
             }
         },
+        "/v1/loan/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "description": "Retrieves detailed information about a specific loan.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "loan"
+                ],
+                "summary": "Get loan detail",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Loan ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful loan detail response",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.BaseResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.LoanDetailResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request error response",
+                        "schema": {
+                            "$ref": "#/definitions/model.BaseResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized error response",
+                        "schema": {
+                            "$ref": "#/definitions/model.BaseResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden error response",
+                        "schema": {
+                            "$ref": "#/definitions/model.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/transaction": {
             "get": {
                 "security": [
@@ -533,6 +600,53 @@
                 }
             }
         },
+        "model.LoanDetailResponse": {
+            "type": "object",
+            "properties": {
+                "admin_fee": {
+                    "type": "number"
+                },
+                "assets_name": {
+                    "type": "string"
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "has_full_paid": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "installment_amount": {
+                    "type": "number"
+                },
+                "otr": {
+                    "type": "number"
+                },
+                "pay_per_month": {
+                    "type": "number"
+                },
+                "start_date": {
+                    "type": "string"
+                },
+                "tenor_months": {
+                    "type": "integer"
+                },
+                "total_amount": {
+                    "type": "number"
+                },
+                "total_paid": {
+                    "type": "integer"
+                },
+                "transactions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.TransactionResponse"
+                    }
+                }
+            }
+        },
         "model.LoanResponse": {
             "type": "object",
             "properties": {
@@ -545,6 +659,9 @@
                 "end_date": {
                     "type": "string"
                 },
+                "has_full_paid": {
+                    "type": "boolean"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -552,6 +669,9 @@
                     "type": "number"
                 },
                 "otr": {
+                    "type": "number"
+                },
+                "pay_per_month": {
                     "type": "number"
                 },
                 "start_date": {
@@ -602,6 +722,9 @@
             "properties": {
                 "amount": {
                     "type": "number"
+                },
+                "date": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
